test/error/StNativeUnterminated.ci
public static class Test
{
	public static bool Run()
	{
		native { //ERROR: Expected RightBrace, got EndOfFile //ERROR: Expected RightBrace, got EndOfFile //ERROR: Expected RightBrace, got EndOfFile